--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "@ionic/lab": "^3.2.10",
     "@ionic/storage": "^2.3.1",
     "body-parser": "^1.19.0",
+    "capacitor": "^0.5.5",
+    "cordova-android": "9.0.0",
     "cordova-browser": "6.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "web": "0.0.2",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
@@ -52,6 +55,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -79,12 +84,17 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
