--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/core": "2.4.7",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/document-viewer": "^5.31.1",
     "@ionic-native/file": "^5.31.1",
@@ -50,6 +52,7 @@
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
+    "@capacitor/cli": "2.4.7",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
